tests/ui/compile-fail/init/no_error_coercion.stderr
error[E0277]: `?` couldn't convert the error to `std::alloc::AllocError`
  --> tests/ui/compile-fail/init/no_error_coercion.rs:19:22
   |
19 |         }? AllocError)
   |                      ^ the trait `From<Infallible>` is not implemented for `std::alloc::AllocError`, which is required by `Result<Foo::new::__InitOk, std::alloc::AllocError>: FromResidual<Result<Infallible, Infallible>>`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = help: the following other types implement trait `FromResidual<R>`:
             <Result<T, F> as FromResidual<Result<Infallible, E>>>
             <Result<T, F> as FromResidual<Yeet<E>>>
   = note: required for `Result<Foo::new::__InitOk, std::alloc::AllocError>` to implement `FromResidual<Result<Infallible, Infallible>>`
   = note: this error originates in the macro `try_init` (in Nightly builds, run with -Z macro-backtrace for more info)
